# BAGOmaze

./: .gitignore  .travis.yml  BAGOMaze.pro  CMakeLists.txt  Makefile  build-directories-config.pri  install-dependecies-dev.sh  install-dependecies-doc.sh  install-dependecies.sh  sonar-project.properties
IDE_files/qtcreator/: BAGOmaze.files  BAGOmaze.includes
docs/: README.md  _config.yml  index.md
docs/080_ressources/: web-icone-v2.xcf  web-icone.xcf
docs/210_doc-dev/: howto-build.md
docs/310-rapport/: BAGOmaze-rapport-v0.1-DRAFT.tex
docs/310-rapport/annexe-contenu_livraison/: annexe-contenu_livraison.tex
docs/310-rapport/annexe-manuel_utilisateur/: annexe-manuel_utilisateur.tex
docs/_layouts/: default.html
docs/memos/website/: init-jekyll.md
rsrc/: grid01.csv  grid02.csv  grid03.csv  grid04.csv  grid05.csv
src/: CMakeLists.txt  application_principale.pro  main.c  modules.pro
src/core/: CMakeLists.txt  grid.c  grid.h  macros.h  module_core.pro
src/core/log/: log.c  log.h
src/ui/: CMakeLists.txt  module_ui.pro  ui.c  ui.h  ui_menu.c  ui_menu.h  ui_menuPlay.c  ui_menuPlay.h  ui_menuPrincipal.c  ui_menuPrincipal.h  ui_play_common.c  ui_play_common.h  ui_play_random.c  ui_play_random.h  ui_play_selected.c  ui_play_selected.h  ui_private.h  ui_utils.c  ui_utils.h
tests/: CMakeLists.txt  tests.pro
tests/manu/: CMakeLists.txt  test-gridData.c
tests/manu/test-gridData/: test-gridData.pro
tests/manu/test-gridData/src/: test-gridData.c
